<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ID item harus identik dengan ID destination di nav_graph_main.xml. -->

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_nav_transaction"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />

</menu>
